Changes for 1.5.1:

 - [DEV-141] improved performance of ZABBIX Proxy module (Sasha)
 - [DEV-140] added support of zabbix[proxy,<proxyname>,lastaccess] (Sasha)
 - [DEV-124] screen actions moved to Audit, added filter for Audit (Artem)
 - [DEV-98] added support of ZABBIX Proxy (Sasha)
 - [DEV-134] JSON static buffer (Sasha)
 - [DEV-15] autodiscovery by ICMP pings (Sasha)
 - [DEV-72] improved icmpping* processing. added "-c3" to fping (Sasha) 
 - [DEV-122] improved "Events" screen, added "Event Details" screen (Artem)
 - [DEV-139] added transaction functionality to frontend (Artem)
 - [DEV-138] added support of update interval in icmpping* simpe checks (Sasha)
 - [DEV-137] increased max number of log file lines sent per second to 100 (Alexei)

Changes for 1.5:

 - [DEV-137] increased max number of log file lines sent per second to 100 (Alexei)
 - [DEV-127] improved system status widget in dashboard screen (Artem)
 - [DEV-125] added "Discovery status" widget (Artem)
 - [DEV-123] screen "queue" moved to administration section (Artem)
 - [DEV-126] moved graphs,maps,screens to dashboard, implemented quick add to favorites (Artem)
 - [DEV-116] added option to remember user login (Artem)
 - [DEV-117] added support of BufferSize and BufferSend paramaters (Alexei)
 - [DEV-118] added dashboard screen to monitoring (Artem)
 - [DEV-117] support of data buffering on agent side (Alexei)
 - [DEV-115] enhanced sender to use only one TCP connection (Alexei)
 - [DEV-112] added themes option in frontend (Artem)
 - [DEV-114] special processing of simple SNMP OIDs like ifDescr, ifInOctets, etc (Alexei)
 - [DEV-114] monitoring of SNMP objects having flexible Index (Alexei)
 - [DEV-104] added maintenance mode (Artem)
 - [DEV-103] added support of disabling login rights for a users group (Artem)
 - [DEV-102] added support of UTF8 for GUI (Artem)
 - [DEV-97] added screen for easier creation of locales (Artem)
 - [DEV-96] added availability to disable default user "guest" (Artem)